# rust-seal

./: .gitignore  Cargo.toml  README.md  build.rs
scripts/: clean_script_outputs.sh
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  oqs.rs  util.rs
src/commands/: decrypt_file.rs  encrypt_file.rs  init.rs  mod.rs  sign_file.rs  verify_signature.rs
src/cryptography/: mod.rs  signature.rs  symmetric.rs
