[package]
name = "rust-seal"
version = "1.0.0"
edition = "2024"
authors = ["Alexander Jablonowski"]

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.98"
clap = { version = "4.5.42", features = ["derive"] }
oqs = { version = "0.11.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3.20.0"
